--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(CaroGame VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(caro_game src/main.cpp src/CaroApp.cpp src/Controller.cpp src/ChessBoard.cpp src/BOT.cpp src/Player.cpp src/Referee.cpp)
+file(GLOB SRC_FILES "${PROJECT_SOURCE_DIR}/src/*.cpp")
+
+add_executable(caro_game ${SRC_FILES})
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
